Added search support

--- a/admin/view/template/extension/shipping/inpost.twig
+++ b/admin/view/template/extension/shipping/inpost.twig
@@ -94,7 +94,6 @@
         </div>
 
         <div class="row">
-            <form method="get">
             <div id="filter-customer" class="col-md-3 col-md-push-9 col-sm-12 hidden-sm hidden-xs">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -112,14 +111,13 @@
                             <input type="text" name="filter_city" value="{{ filter_city }}" placeholder="{{ entry_city }}" id="input-email" class="form-control"/>
                         </div>
                         <div class="form-group text-right">
-                            <button type="submit" id="button-filter" class="btn btn-default">
+                            <button type="button" id="button-filter" class="btn btn-default">
                                 <i class="fa fa-filter"></i>
                                 {{ button_filter }}</button>
                         </div>
                     </div>
                 </div>
             </div>
-            </form>
             <div class="col-md-9 col-md-pull-3 col-sm-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -203,6 +201,19 @@
                         }
                     }
                 });
+            });
+
+            $("#button-filter").on('click' , function() {
+                url = 'index.php?route=extension/shipping/inpost&user_token={{ user_token }}';
+                var filter_postcode = $('input[name=\'filter_postcode\']').val();
+                if (filter_postcode) {
+                  url += '&filter_postcode=' + encodeURIComponent(filter_postcode);
+                }
+                var filter_city = $('input[name=\'filter_city\']').val();
+                if (filter_city) {
+                  url += '&filter_city=' + encodeURIComponent(filter_city);
+                }
+                location = url;
             });
         });
     </script>
