--- a/admin/view/template/extension/shipping/inpost.twig
+++ b/admin/view/template/extension/shipping/inpost.twig
@@ -94,7 +94,7 @@
         </div>
 
         <div class="row">
-            <div id="filter-customer" class="col-md-3 col-md-push-9 col-sm-12 hidden-sm hidden-xs">
+            <div id="filter-inpost" class="col-md-3 col-md-push-9 col-sm-12 hidden-sm hidden-xs">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h3 class="panel-title">
