--- a/admin/view/template/extension/shipping/inpost.twig
+++ b/admin/view/template/extension/shipping/inpost.twig
@@ -89,6 +89,27 @@
                             <input type="text" name="shipping_inpost_sort_order" value="{{ shipping_inpost_sort_order }}" placeholder="{{ entry_sort_order }}" id="input-sort-order" class="form-control"/>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label" for="input-status">{{ entry_type }}</label>
+                        <div class="col-sm-10">
+                            <select name="shipping_inpost_type" id="input-type" class="form-control">
+                                {% if shipping_inpost_type %}
+                                    <option value="1" selected="selected">{{ text_type_map }}</option>
+                                    <option value="0">{{ text_type_list }}</option>
+                                {% else %}
+                                    <option value="1">{{ text_type_map }}</option>
+                                    <option value="0" selected="selected">{{ text_type_list }}</option>
+                                {% endif %}
+                            </select>
+                        </div>
+                    </div>
+                     <div class="form-group">
+                        <label class="col-sm-2 control-label" for="input-google-api-key">
+                            <span data-toggle="tooltip" title="{{ help_google_api_key }}">{{ entry_google_api_key }}</span></label>
+                        <div class="col-sm-10">
+                            <input type="text" name="shipping_inpost_google_api_key" value="{{ shipping_inpost_google_api_key }}" placeholder="" id="input-google-api-key" class="form-control"/>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
